WIP: fixed spacing in title

--- a/my-app/src/components/style.module.scss
+++ b/my-app/src/components/style.module.scss
@@ -24,6 +24,7 @@
   font-family: $font-family-bold;
   color: $primary-color;
   margin-bottom: 0.5rem;
+  margin-top: 1rem;
 }
 
 .form__description {
